--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "method-override": "^3.0.0",
     "multer": "^1.4.2",
     "path": "^0.12.7",
-    "pug": "^3.0.0"
+    "pug": "^3.0.0",
+    "socket.io": "^3.1.1"
   }
 }
