--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon"
+    "start": "nodemon",
+    "ServerES6toJS5": "node_modules/.bin/babel server.es6.js -o dist/server.js -w",
+    "ServerTStoJS5": "node_modules/.bin/tsc ./dist/server.js -w"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
@@ -19,6 +23,9 @@
     "multer": "^1.4.2",
     "path": "^0.12.7",
     "pug": "^3.0.0",
-    "socket.io": "^3.1.1"
+    "socket.io": "^3.1.1",
+    "tsc": "^1.20150623.0",
+    "tsc-init": "^2.1.0",
+    "typescript": "^4.2.2"
   }
 }
