--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "socket.io": "^3.1.1",
     "tsc": "^1.20150623.0",
     "tsc-init": "^2.1.0",
-    "typescript": "^4.2.2"
+    "typescript": "^4.2.2",
+    "uuid": "^8.3.2"
   }
 }
